k8s/addons/ingress_without_tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: principal-ingress2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend:
    service:
      name: spaceland-front-svc
      port:
        number: 80
  rules:
  - host: yoo.ensemspace.land
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spaceland-front-svc
            port:
              number: 80
